OtherPages/IndividualWorks/IIMUN-Work/iimun-work.css
body {
  background-color: #181818;
  margin: 0 0 0 0;
}

::-webkit-scrollbar {
  width: 12px;
  height: 12px;
}
  
::-webkit-scrollbar-track {
  background: #A9A9A9;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background: #808080;
}

::-webkit-scrollbar-thumb:hover {
  background: #383838;
}

.iimunwork {
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
}

.work-title {
  font-size: 500%;
  font-weight: 700;
  color: white;
  font-family: 'Hind Siliguri', sans-serif;
}

.org-logo {
  width: 20%;
  border-radius: 30px;
}

.Aboutorganization, .Workorganization, .Prototypeapp {
  padding-left: 20px;
  padding-right: 20px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  font-family: 'Hind Siliguri', sans-serif;
}

.Gallery {
  width: 1358px;
  padding-left: 20px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  font-family: 'Hind Siliguri', sans-serif;
}

.Abouttitle, .Worktitle, .Prototypetitle, .Gallerytitle {
  font-size: 24px;
  font-weight: 700;
  line-height: 100%;
  color: white;
}

.Abouttext, .Worktext, .Prototypetext {
  width: 1358px;
  font-size: 24px;
  line-height: 100%;
  text-align: justify;
  color: white;
  text-decoration: none;
}

.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;
}

/* Hide the images by default */
.mySlides {
  display: none;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  background-color: black;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #717171;
}

/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

.ss-images {
  width: 30%;
  padding-left: 3%;
  border-radius: 30px;
}

